Latest:
------
 For even more detail, use "git log" or visit
 https://github.com/linbit/drbd-utils

9.30.0
-----------
 * drbdmon: various improvements
 * drbdadm: preparations for drbd-proxy v4
 * ocf: explicitly timeout crm_master IPC early
 * ocf: account for "recent" name change to "Promoted"
 * windrbd: various improvements
 * doc: switch to drbd9 manpages by default
 * init: reverse dependency for drbd-graceful-shutdown.service
   drbd@.service now has an After dependency for it.

9.29.0
-----------
 * drbdmeta: fix initialization for external md
 * build: allow disbling keyutils
 * tests: export sanitized environment
 * drbdmon: various improvements
 * build: add cyclonedx
 * drbsetup,v9: fix multiple paths drbdsetup show --json
   strictly spreaking breaking change, but maily used internally
 * events2: expose if device is open
 * drbdadm: fix undefined behavior that triggered on amd64
 * shared: fix out-of-bounds access in parsing
 * drbsetup,v9: event consistency with peer devices
 * drbdadm: fix parsing of v8.4 configs for compatibility
 * drbdmeta: fix segfault for check-resize on intentionally diskless
 * drbd-promote@.service: check if ExecCondition is available

9.28.0
-----------
 * events2: set may_promote:no promotion_score:0 while
   force-io-failure:yes
 * drbdsetup,v9: show TLS in connection status
 * drbdsetup,v9: add udev command
 * 8.3: remove
 * crm-fence-peer.9.sh: fixes for pacemaker 2.1.7
 * events2: improved out of order message handling

9.27.0
-----------
 * adjust,v9: retry for diskless primaries
 * tests: sanitize env (e.g., TZ)
 * drbdmeta: dump and restore the members field

9.26.0
-----------
 * config,v9: new config option load-balance-paths
 * config,v9: new config options rdma-ctrls-(snd|rcv)buf-size
 * drbdadm,v9: fix segfault if proxy has no path
 * drbd: increase maximum CPU mask size
 * systemd: introduce drbd-graceful-shutdown.service
 * drbdmeta,v9: fix regression, allow attach after offline resize