@@ -26,7 +26,6 @@ PO4A_GETTEXTIZE = @PO4A_GETTEXTIZE@
 # features enabled or disabled by configure
 WITH_84_SUPPORT = @WITH_84_SUPPORT@
 WITH_UDEV = @WITH_UDEV@
-WITH_XEN = @WITH_XEN@
 WITH_PACEMAKER = @WITH_PACEMAKER@
 WITH_RGMANAGER = @WITH_RGMANAGER@
 WITH_BASHCOMPLETION = @WITH_BASHCOMPLETION@
