@@ -4,8 +4,6 @@ drbdadm.bash_completion
 	bash completion for the drbdadm command
 drbddisk
 	resource script for heartbeat (R1 style)
-block-drbd
-	xen "drbd" vbd type implementation
 drbd.sh.rhcs
 	resource script for Red Hat Cluster Suite rgmanager
 drbd.metadata.rhcs
